# mpcs51045_project

./: .gitignore  README.md
Project/: CMakeLists.txt  main.cpp
Project/data/: test_batch.txt
Project/filters/: CMakeLists.txt  batchfilters.hpp  filter.hpp  homography.hpp
Project/img/: CMakeLists.txt  batch.hpp  img.hpp  img_factory.hpp  visitor.hpp
Project/transformations/: CMakeLists.txt  batchfilters.hpp  homography.hpp
Project/utils/: CMakeLists.txt  img_factory.hpp  img_visitor.hpp  types.hpp
